--- a/firebase.json
+++ b/firebase.json
@@ -1,5 +1,17 @@
 {
     "hosting": {
-        "public": "dist"
+      "public": "dist",
+      "ignore": [
+        "firebase.json",
+        "**/.*",
+        "**/node_modules/**"
+      ],
+      "rewrites": [
+        {
+          "source": "**",
+          "destination": "/index.html"
+        }
+      ]
     }
-}
+  }
+  
