--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@angular/platform-browser-dynamic": "^4.2.4",
     "@angular/router": "^4.2.4",
     "@ng-bootstrap/ng-bootstrap": "^1.0.0-beta.5",
+    "angular-4-data-table": "^0.3.0",
     "angularfire2": "^4.0.0-rc.1",
     "bootstrap": "^4.0.0-beta.2",
     "core-js": "^2.4.1",
