--- a/package.json
+++ b/package.json
@@ -25,9 +25,11 @@
     "angular-4-data-table": "^0.3.0",
     "angularfire2": "^4.0.0-rc.1",
     "bootstrap": "^4.0.0-beta.2",
+    "chart.js": "^2.7.1",
     "core-js": "^2.4.1",
     "firebase": "^4.2.0",
     "font-awesome": "^4.7.0",
+    "ng2-charts": "^1.6.0",
     "ng2-validation": "^4.2.0",
     "rxjs": "^5.4.2",
     "zone.js": "^0.8.14"
