--- a/.travis.yml
+++ b/.travis.yml
@@ -10,7 +10,7 @@ branches:
 
 before_script:
   - npm install -g firebase-tools
-  - npm install -g angular-cli@1.4.5
+  - npm install -g @angular/cli@1.4.5
 
 script:
   - ng build --prod -aot=false
