--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "@ng-bootstrap/ng-bootstrap": "^1.0.0-beta.5",
     "angular-4-data-table": "^0.3.0",
     "angularfire2": "^4.0.0-rc.1",
-    "bootstrap": "^4.0.0-beta.2",
+    "bootstrap": "4.0.0-beta.2",
     "chart.js": "^2.7.1",
     "core-js": "^2.4.1",
     "firebase": "^4.2.0",
