--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "bootstrap": "4.0.0-beta.2",
     "chart.js": "^2.7.1",
     "core-js": "^2.4.1",
-    "firebase": "^4.2.0",
+    "firebase": "4.2.0",
     "font-awesome": "^4.7.0",
     "ng2-charts": "^1.6.0",
     "ng2-validation": "^4.2.0",
