--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "angular-4-data-table": "^0.3.0",
     "angularfire2": "4.0.0-rc.1",
     "bootstrap": "4.0.0-beta.2",
-    "chart.js": "^2.7.1",
+    "chart.js": "^2.9.3",
     "core-js": "^2.4.1",
     "firebase": "4.2.0",
     "font-awesome": "^4.7.0",
@@ -50,6 +50,7 @@
     "karma-coverage-istanbul-reporter": "^1.2.1",
     "karma-jasmine": "~1.1.0",
     "karma-jasmine-html-reporter": "^0.2.2",
+    "node-sass": "^4.13.0",
     "protractor": "~5.1.2",
     "ts-node": "~3.2.0",
     "tslint": "~5.7.0",
