--- a/package.json
+++ b/package.json
@@ -12,17 +12,17 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^4.2.4",
-    "@angular/common": "^4.2.4",
-    "@angular/compiler": "^4.2.4",
-    "@angular/core": "^4.2.4",
-    "@angular/forms": "^4.2.4",
-    "@angular/http": "^4.2.4",
-    "@angular/platform-browser": "^4.2.4",
-    "@angular/platform-browser-dynamic": "^4.2.4",
-    "@angular/router": "^4.2.4",
+    "@angular/animations": "^5.0.0",
+    "@angular/common": "^5.0.0",
+    "@angular/compiler": "^5.0.0",
+    "@angular/core": "^5.0.0",
+    "@angular/forms": "^5.0.0",
+    "@angular/http": "^5.0.0",
+    "@angular/platform-browser": "^5.0.0",
+    "@angular/platform-browser-dynamic": "^5.0.0",
+    "@angular/router": "^5.0.0",
     "@ng-bootstrap/ng-bootstrap": "1.0.0-beta.5",
-    "angular-4-data-table": "^0.3.0",
+    "angular5-data-table": "^1.0.3",
     "angularfire2": "4.0.0-rc.1",
     "bootstrap": "4.0.0-beta.2",
     "chart.js": "^2.9.3",
@@ -31,12 +31,12 @@
     "font-awesome": "^4.7.0",
     "ng2-charts": "^1.6.0",
     "ng2-validation": "^4.2.0",
-    "rxjs": "^5.4.2",
+    "rxjs": "^5.5.2",
     "zone.js": "^0.8.14"
   },
   "devDependencies": {
     "@angular/cli": "1.4.5",
-    "@angular/compiler-cli": "^4.2.4",
+    "@angular/compiler-cli": "^5.0.0",
     "@angular/language-service": "^4.2.4",
     "@types/jasmine": "~2.5.53",
     "@types/jasminewd2": "~2.0.2",
@@ -54,7 +54,9 @@
     "protractor": "~5.1.2",
     "ts-node": "~3.2.0",
     "tslint": "~5.7.0",
-    "typescript": "~2.3.3"
+    "typescript": "^2.4.2"
   },
-  "engines": { "node": "8" }
+  "engines": {
+    "node": "8"
+  }
 }
