--- a/package.json
+++ b/package.json
@@ -54,7 +54,8 @@
     "protractor": "~5.1.2",
     "ts-node": "~3.2.0",
     "tslint": "~5.7.0",
-    "typescript": "^2.4.2"
+    "typescript": "^2.4.2",
+    "webpack": "^3.11.0"
   },
   "engines": {
     "node": "8"
