--- a/package.json
+++ b/package.json
@@ -22,10 +22,10 @@
     "@angular/platform-browser-dynamic": "^5.2.0",
     "@angular/platform-server": "^5.2.0",
     "@angular/router": "^5.2.0",
-    "@ng-bootstrap/ng-bootstrap": "1.0.0-beta.5",
+    "@ng-bootstrap/ng-bootstrap": "^1.1.1",
     "angular5-data-table": "^1.0.3",
     "angularfire2": "4.0.0-rc.1",
-    "bootstrap": "4.0.0-beta.2",
+    "bootstrap": "^4.0.0",
     "chart.js": "^2.9.3",
     "core-js": "^2.4.1",
     "firebase": "4.2.0",
