--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -16,5 +16,5 @@ jobs:
           paths:
             - node_modules
           key: v1-dependencies-{{ checksum "package.json" }}
-      - run: npm run buil
+      - run: npm run build
       - run: './node_modules/.bin/firebase deploy --only hosting --token=$FirebaseToken'
